linking and install change to script

--- a/build
+++ b/build
@@ -3,6 +3,7 @@ git submodule update --init
 cd ./include/termbox2
 make libtermbox.so
 make libtermbox.a
-sudo cp -u libtermbox.so /usr/local/lib
+sudo make install
+sudo cp -u /usr/local/lib/libtermbox.so /usr/lib/
 cd ../..
 make -j4
